--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="w3-row">
   <div class="w3-half w3-black w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
-      <h1>My Logo</h1>
+      <h1>Abhishek Pillai</h1>
     </div>
     <div class="w3-padding-64">
       <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Home</a>
@@ -24,8 +24,8 @@
       <h1>About Me</h1>
       <img src="images/Cover.png" class="w3-margin w3-circle" alt="Person" style="width:50%; overflow:scroll;">
       <div class="w3-left-align w3-padding-large">
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p>Graduate from U.V Patel College of Engineering in Computer Engineering currently pursuing Post graduation diploma in big data analytics from CDAC(Centre for development of advanced computing) Pune . I have a thorough experience in working on different platform to develop models and applications which helped me in understanding those fields and also to devise novel solutions to the problems faced by many. Currently my field of interest is Machine Learning and Artificial Intelligence, for which I have taken up few courses and now I am implementing those concepts in real life scenarios to build a coherent application tool. </p>
+        
       </div>
     </div>
   </div>
