--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     </div>
     <div class="w3-row">
       <div class="w3-half">
-        <img src="/w3images/coffee.jpg" style="width:100%">
+        <img src="/images/result.png" style="width:100%">
+        <p>Action Recognition</p>
       </div>
       <div class="w3-half">
         <img src="/w3images/workbench.jpg" style="width:100%">
