--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
     </div>
   </div>
-  <div class="w3-half w3-blue-grey w3-container" style="height:700px; overflow:scroll;">
+  <div class="w3-half w3-blue-grey w3-container" style="height:700px;">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
       <img src="images/myself_circ.png" class="w3-margin w3-circle" alt="Person" style="width:290px; height:310px;">
@@ -44,7 +44,8 @@
         <p>Action Recognition</p>
       </div>
       <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
+        <img src="/images/earthquake.jpg" style="width:100%">
+        <p>Damage Grade prediction post-earthquake</p>
       </div>
     </div>
     <div class="w3-row w3-hide-small">
