--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     </div>
     <div class="w3-row">
       <div class="w3-half">
-        <img src="/images/result.png" style="width:100%">
+        <img src="images/result.png" style="width:100%">
         <p>Action Recognition</p>
       </div>
       <div class="w3-half">
-        <img src="/images/earthquake.jpg" style="width:100%">
+        <img src="images/earthquake.jpg" style="width:100%">
         <p>Damage Grade prediction post-earthquake</p>
       </div>
     </div>
