--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <img src="images/result.png" style="width:100%">
         <p>Action Recognition</p>
       </div>
+      &nbsp
       <div class="w3-half">
         <img src="images/earthquake.jpg" style="width:100%">
         <p>Damage Grade prediction post-earthquake</p>
