--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
+        <img src="images/alexa.png" style="width:50%">
       </div>
       <div class="w3-half">
         <img src="/w3images/coffee.jpg" style="width:100%">
