--- a/index.html
+++ b/index.html
@@ -40,30 +40,34 @@
     </div>
     <div class="w3-row">
       <div class="w3-half">
-        <img src="images/result.png" style="width:50%">
+        <img src="images/result.png" style="width:80%">
         <p>Action Recognition</p>
       </div>
    
       <div class="w3-half">
-        <img src="images/earthquake.jpg" style="width:50%">
+        <img src="images/earthquake.jpg" style="width:80%">
         <p>Damage Grade prediction post-earthquake</p>
       </div>
     </div>
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="images/alexa.png" style="width:50%">
+        <img src="images/alexa.png" style="width:80%">
+        <p>ALEXA skills</p>
       </div>
       <div class="w3-half">
-        <img src="/w3images/coffee.jpg" style="width:100%">
+        <img src="images/plant.jpeg" style="width:80%">
+        <p>Plant Disease Classifier</p>
       </div>
     </div>
 
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="/w3images/sound.jpg" style="width:100%">
+        <img src="images/finder.png" style="width:100%">
+        <p>Finder App</p>
       </div>
       <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
+        <img src="images/WordArt.jpeg" style="width:100%">
+        <p>Automated GUI(Prototype)</p>
       </div>
     </div><br>
     <p>Just call me awesome.</p>
