--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <p>Finder App</p>
       </div>
       <div class="w3-half">
-        <img src="images/WordArt.jpeg" style="width:80%">
+        <img src="images/WordArt.jpeg" style="width:80%; height:40%;">
         <p>Automated GUI(Prototype)</p>
       </div>
     </div><br>
