--- a/index.html
+++ b/index.html
@@ -32,7 +32,90 @@
 </div>
 
 <!-- Second Grid: Work & Resume -->
-<div class="w3-row">
+  <div class="w3-row">
+  <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
+    <div class="w3-padding-64">
+      <h2>My Work</h2>
+      <p>Some of my latest projects.</p>
+    </div>
+    <div class="w3-row">
+      <div class="w3-half">
+        <img src="images/result.png" style="width:80%">
+        <p>Action Recognition</p>
+      </div>
+   
+      <div class="w3-half">
+        <img src="images/earthquake.jpg" style="width:80%">
+        <p>Damage Grade prediction post-earthquake</p>
+      </div>
+    </div>
+    <div class="w3-row w3-hide-small">
+      <div class="w3-half">
+        <img src="images/alexa.png" style="width:80%">
+        <p>ALEXA skills</p>
+      </div>
+      <div class="w3-half">
+        <img src="images/plant.jpeg" style="width:80%">
+        <p>Plant Disease Classifier</p>
+      </div>
+    </div>
+
+    <div class="w3-row w3-hide-small">
+      <div class="w3-half">
+        <img src="images/finder.png" style="width:80%">
+        <p>Finder App</p>
+      </div>
+      <div class="w3-half">
+        <img src="images/WordArt.jpeg" style="width:80%; height:40%;">
+        <p>Automated GUI(Prototype)</p>
+      </div>
+    </div><br>
+    <p>Just call me awesome.</p>
+  </div>
+  <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
+    <div class="w3-padding-64">
+      <h2>My Work</h2>
+      <p>Some of my latest projects.</p>
+    </div>
+    <div class="w3-row">
+      <div class="w3-half">
+        <img src="images/result.png" style="width:80%">
+        <p>Action Recognition</p>
+      </div>
+   
+      <div class="w3-half">
+        <img src="images/earthquake.jpg" style="width:80%">
+        <p>Damage Grade prediction post-earthquake</p>
+      </div>
+    </div>
+    <div class="w3-row w3-hide-small">
+      <div class="w3-half">
+        <img src="images/alexa.png" style="width:80%">
+        <p>ALEXA skills</p>
+      </div>
+      <div class="w3-half">
+        <img src="images/plant.jpeg" style="width:80%">
+        <p>Plant Disease Classifier</p>
+      </div>
+    </div>
+
+    <div class="w3-row w3-hide-small">
+      <div class="w3-half">
+        <img src="images/finder.png" style="width:80%">
+        <p>Finder App</p>
+      </div>
+      <div class="w3-half">
+        <img src="images/WordArt.jpeg" style="width:80%; height:40%;">
+        <p>Automated GUI(Prototype)</p>
+      </div>
+    </div><br>
+    <p>Just call me awesome.</p>
+  </div>
+</div>
+
+  
+  
+<!-- <div class="w3-row">
   <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
     <div class="w3-padding-64">
       <h2>My Work</h2>
@@ -117,7 +200,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Third Grid: Swing By & Contact -->
 <div class="w3-row" id="contact">
