--- a/index.html
+++ b/index.html
@@ -74,39 +74,38 @@
   </div>
   <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
     <div class="w3-padding-64">
-      <h2>My Work</h2>
-      <p>Some of my latest projects.</p>
+      <h2>More of my Work</h2>
     </div>
     <div class="w3-row">
       <div class="w3-half">
-        <img src="images/result.png" style="width:80%">
-        <p>Action Recognition</p>
+        <img src="images/quora.png" style="width:80%">
+        <p>Quora similarity classification</p>
       </div>
    
       <div class="w3-half">
-        <img src="images/earthquake.jpg" style="width:80%">
-        <p>Damage Grade prediction post-earthquake</p>
+        <img src="images/twitter.png" style="width:80%">
+        <p>Twitter sentiment analyser</p>
       </div>
     </div>
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="images/alexa.png" style="width:80%">
-        <p>ALEXA skills</p>
+        <img src="images/omr.jpeg" style="width:80%">
+        <p>OMR Scanner</p>
       </div>
       <div class="w3-half">
-        <img src="images/plant.jpeg" style="width:80%">
-        <p>Plant Disease Classifier</p>
+        <img src="images/movie.png" style="width:80%">
+        <p>Movie recommendation system</p>
       </div>
     </div>
 
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="images/finder.png" style="width:80%">
-        <p>Finder App</p>
+        <img src="images/submit.jpg" style="width:80%">
+        <p>Resource planning tool(JAVA)</p>
       </div>
       <div class="w3-half">
-        <img src="images/WordArt.jpeg" style="width:80%; height:40%;">
-        <p>Automated GUI(Prototype)</p>
+        <img src="images/more.jpeg" style="width:80%;">
+        <p>More practice projects</p>
       </div>
     </div><br>
     <p>Just call me awesome.</p>
