--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
         <p>Automated GUI(Prototype)</p>
       </div>
     </div><br>
-    <p>Just call me awesome.</p>
   </div>
   <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
     <div class="w3-padding-64">
@@ -100,7 +99,7 @@
 
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="images/submit.jpg" style="width:80%">
+        <img src="images/submit.jpg" style="width:80%; height:40%;">
         <p>Resource planning tool(JAVA)</p>
       </div>
       <div class="w3-half">
@@ -108,7 +107,6 @@
         <p>More practice projects</p>
       </div>
     </div><br>
-    <p>Just call me awesome.</p>
   </div>
 </div>
 
