--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="w3-row">
       <div class="w3-half">
-        <img src="images/result.png" style="width:80%">
+        <a href="https://github.com/Abhi098/Action_Recognition"><img src="images/result.png" style="width:80%"></a>
         <p>Action Recognition</p>
       </div>
    
