--- a/index.html
+++ b/index.html
@@ -45,28 +45,28 @@
       </div>
    
       <div class="w3-half">
-        <img src="images/earthquake.jpg" style="width:80%">
+        <a href="https://github.com/Abhi098/Predict-the-damage-to-a-building"><img src="images/earthquake.jpg" style="width:80%"></a>
         <p>Damage Grade prediction post-earthquake</p>
       </div>
     </div>
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="images/alexa.png" style="width:80%">
+        <a href="https://github.com/Abhi098/Alexa_Skills"><img src="images/alexa.png" style="width:80%"></a>
         <p>ALEXA skills</p>
       </div>
       <div class="w3-half">
-        <img src="images/plant.jpeg" style="width:80%">
+        <a href="https://github.com/Abhi098/Plant_disease_classifier"><img src="images/plant.jpeg" style="width:80%"></a>
         <p>Plant Disease Classifier</p>
       </div>
     </div>
 
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="images/finder.png" style="width:80%">
+        <a href="https://github.com/Abhi098/Finder"><img src="images/finder.png" style="width:80%"></a>
         <p>Finder App</p>
       </div>
       <div class="w3-half">
-        <img src="images/WordArt.jpeg" style="width:80%; height:40%;">
+        <a href="https://github.com/Abhi098/automated_GUI_prototype"><img src="images/WordArt.jpeg" style="width:80%; height:40%;"></a>
         <p>Automated GUI(Prototype)</p>
       </div>
     </div><br>
@@ -82,28 +82,28 @@
       </div>
    
       <div class="w3-half">
-        <img src="images/twitter.png" style="width:80%">
+        <a href="https://github.com/Abhi098/twitter_classification"><img src="images/twitter.png" style="width:80%"></a>
         <p>Twitter sentiment analyser</p>
       </div>
     </div>
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="images/omr.jpeg" style="width:80%">
+        <a href="https://github.com/Abhi098/OMR_Scanner"> <img src="images/omr.jpeg" style="width:80%"> </a>
         <p>OMR Scanner</p>
       </div>
       <div class="w3-half">
-        <img src="images/movie.png" style="width:80%">
+        <a href="https://github.com/Abhi098/Movie_recommendation"><img src="images/movie.png" style="width:80%"></a>
         <p>Movie recommendation system</p>
       </div>
     </div>
 
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="images/submit.jpg" style="width:80%; height:40%;">
+        <a href="https://github.com/Abhi098/Resource_plannnig_tool-java-"><img src="images/submit.jpg" style="width:80%; height:40%;"></a>
         <p>Resource planning tool(JAVA)</p>
       </div>
       <div class="w3-half">
-        <img src="images/more.jpeg" style="width:80%;">
+        <a href="https://github.com/Abhi098?tab=repositories"><img src="images/more.jpeg" style="width:80%;"></a>
         <p>More practice projects</p>
       </div>
     </div><br>
@@ -201,16 +201,51 @@
 
 <!-- Third Grid: Swing By & Contact -->
 <div class="w3-row" id="contact">
-  <div class="w3-half w3-dark-grey w3-container w3-center" style="height:700px">
-    <div class="w3-padding-64">
-      <h1>Swing By</h1>
+  <div class="w3-half w3-dark-grey w3-container w3-center" style="height:800px">
+   <div class="w3-padding-64 w3-center">
+      <h2>Resumea</h2>
+      <p>A draft from my CV</p>
+      <div class="w3-container w3-responsive">
+        <table class="w3-table">
+          <tr>
+            <th>Year</th>
+            <th>Title</th>
+            <th>Where</th>
+          </tr>
+          <tr class="w3-white">
+            <td>2012-2016</td>
+            <td>The rest is history..</td>
+            <td>Lorem ipsum</td>
+          </tr>
+          <tr>
+            <td>2009-2012</td>
+            <td>Started my own company</td>
+            <td>My Garage</td>
+          </tr>
+          <tr class="w3-white">
+            <td>2008-2009</td>
+            <td>Started working for Lorem</td>
+            <td>London, UK</td>
+          </tr>
+          <tr>
+            <td>2005-2008</td>
+            <td>Degree in Bachelor of Design</td>
+            <td>Harvard, USA</td>
+          </tr>
+          <tr class="w3-white">
+            <td>2002-2005</td>
+            <td>Degree in Bachelor of Business</td>
+            <td>RMIT University, Melbourne, Australia</td>
+          </tr>
+          <tr class="w3-hide-medium">
+            <td>2002-2005</td>
+            <td>Degree in Bachelor of Business</td>
+            <td>RMIT University, Melbourne, Australia</td>
+          </tr>
+        </table>
+      </div>
     </div>
-    <div class="w3-padding-64">
-      <p>..for a cup of coffee, or whatever.</p>
-      <p>Chicago, US</p>
-      <p>+00 1515151515</p>
-      <p>test@test.com</p>
-    </div>
+   
   </div>
   <div class="w3-half w3-teal w3-container" style="height:700px">
     <div class="w3-padding-64 w3-padding-large">
