--- a/index.html
+++ b/index.html
@@ -203,45 +203,50 @@
 <div class="w3-row" id="contact">
   <div class="w3-half w3-dark-grey w3-container w3-center" style="height:800px">
    <div class="w3-padding-64 w3-center">
-      <h2>Resumea</h2>
-      <p>A draft from my CV</p>
+      <h2>Timeline</h2>
+      
       <div class="w3-container w3-responsive">
         <table class="w3-table">
           <tr>
             <th>Year</th>
             <th>Title</th>
-            <th>Where</th>
+            <th>Information</th>
           </tr>
           <tr class="w3-white">
-            <td>2012-2016</td>
-            <td>The rest is history..</td>
-            <td>Lorem ipsum</td>
+            <td>1997-</td>
+            <td>Beginning of my journey</td>
+            <td>19/06/1997 my birthday</td>
           </tr>
           <tr>
-            <td>2009-2012</td>
-            <td>Started my own company</td>
-            <td>My Garage</td>
+            <td>1997-2012</td>
+            <td>Lots of School</td>
+            <td>I was in St Kabir school for my whole childhood with 9.4 CGPA in 10h standard(CBSE) /td>
           </tr>
           <tr class="w3-white">
-            <td>2008-2009</td>
-            <td>Started working for Lorem</td>
-            <td>London, UK</td>
+            <td>2013-2015</td>
+            <td>Beginning of computer Science</td>
+            <td>The crucial years of my life where I got know more about computer and other things.Succeded 12th with 89%(CBSE)</td>
           </tr>
           <tr>
-            <td>2005-2008</td>
-            <td>Degree in Bachelor of Design</td>
-            <td>Harvard, USA</td>
+            <td>2015-2019</td>
+            <td>A college boy</td>
+            <td>U.V Patel College of enginneering with specialization in Computer engineering where I graduated with 8.67 CGPA</td>
           </tr>
           <tr class="w3-white">
-            <td>2002-2005</td>
-            <td>Degree in Bachelor of Business</td>
-            <td>RMIT University, Melbourne, Australia</td>
+            <td>2016-</td>
+            <td>Introduction to Machine Learning</td>
+            <td>A new concept in my life was introduced which got all my attention and I was determined to know each and every inch of it.</td>
           </tr>
           <tr class="w3-hide-medium">
-            <td>2002-2005</td>
-            <td>Degree in Bachelor of Business</td>
-            <td>RMIT University, Melbourne, Australia</td>
+            <td>2019</td>
+            <td>Centre of development for advanced computing</td>
+            <td>Pursuing an post graduation diploma in Big Data analytics at CDAC pune. </td>
           </tr>
+          <tr class="w3-hide-medium">
+            <td>2016-Long Time</td>
+            <td>Learing</td>
+            <td>Cannot provide a date for when learing would end</td>
+          </tr> 
         </table>
       </div>
     </div>
