--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <tr>
             <td>1997-2012</td>
             <td>Lots of School</td>
-            <td>I was in St Kabir school for my whole childhood with 9.4 CGPA in 10h standard(CBSE) /td>
+            <td>I was in St Kabir school for my whole childhood with 9.4 CGPA in 10h standard(CBSE)</td>
           </tr>
           <tr class="w3-white">
             <td>2013-2015</td>
@@ -258,8 +258,8 @@
       <p class="w3-opacity">GET IN TOUCH</p>
       <form class="w3-container w3-card w3-padding-32 w3-white" action="/action_page.php" target="_blank">
         <div class="w3-section">
-          <label>Name</label>
-          <input class="w3-input" style="width:100%;" type="text" required name="Name">
+          <label>Email ID</label>
+          <p>abhishekpillai.ap@gmail.com</p>
         </div>
         <div class="w3-section">
           <label>Email</label>
