--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <div class="w3-padding-64">
       <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Home</a>
       <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Work</a>
-      <a href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Resume</a>
-      <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
+      <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Timeline</a>
     </div>
   </div>
   <div class="w3-half w3-blue-grey w3-container" style="height:700px;">
@@ -260,16 +259,9 @@
         <div class="w3-section">
           <label>Email ID</label>
           <p>abhishekpillai.ap@gmail.com</p>
+          <label>Linkedin profile</label>
+          <p>www.linkedin.com/in/abhishek-pillai02</p>
         </div>
-        <div class="w3-section">
-          <label>Email</label>
-          <input class="w3-input" style="width:100%;" type="text" required name="Email">
-        </div>
-        <div class="w3-section">
-          <label>Message</label>
-          <input class="w3-input" style="width:100%;" type="text" required name="Message">
-        </div>
-        <button type="submit" class="w3-button w3-teal w3-right">Send</button>
       </form>
     </div>
   </div>
@@ -277,7 +269,7 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-black w3-padding-16">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <p>sab theek hoh jaenga!!!!</p>
 </footer>
 
 </body>
