--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-black w3-padding-16">
-  <p>sab theek hoh jaenga!!!!</p>
+  <p><b>Sab theek hoh jaenga!!!!</b></p>
 </footer>
 
 </body>
