--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
       <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Timeline</a>
     </div>
   </div>
-  <div class="w3-half w3-blue-grey w3-container" style="height:700px;  
-  margin-right: -50px;
+  <div class="w3-half w3-blue-grey w3-container" style="height:700px; overflow:hidden;">
+    <div class="w3-padding-64 w3-center" style=" height:100%; margin-right:-50px;
   padding-right: 50px; 
   overflow-y: scroll;">
-    <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
       <img src="images/myself_circ.png" class="w3-margin w3-circle" alt="Person" style="width:290px; height:310px;">
       <div class="w3-left-align w3-padding-large">
