--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
       <img src="images/myself_circ.png" class="w3-margin w3-circle" alt="Person" style="width:290px; height:310px;">
       <div class="w3-left-align w3-padding-large">
         <p>Graduate from U.V Patel College of Engineering in Computer Engineering currently pursuing Postgraduation diploma in big data analytics from CDAC(Centre for development of advanced computing.I have a thorough experience in working on different platform to develop models and applications which helped me in understanding those fields and also to devise novel solutions to the problems faced by many.Currently my field of interest is Machine Learning and computer vision, for which I have taken up few courses and now I am implementing those concepts in real life scenarios to build a coherent application tool. </p>
-        <p>Graduate from U.V Patel College of Engineering in Computer Engineering currently pursuing Postgraduation diploma in big data analytics from CDAC(Centre for development of advanced computing.I have a thorough experience in working on different platform to develop models and applications which helped me in understanding those fields and also to devise novel solutions to the problems faced by many.Currently my field of interest is Machine Learning and computer vision, for which I have taken up few courses and now I am implementing those concepts in real life scenarios to build a coherent application tool. </p>
+        
       </div>
     </div>
   </div>
 </div>
 
 <!-- Second Grid: Work & Resume -->
-  <div class="w3-row">
-  <div class="w3-half w3-light-grey w3-center" style="min-height:1100px" id="work">
+  <div class="w3-row" style="overflow:hidden;">
+  <div class="w3-half w3-light-grey w3-center" style="min-height:1100px; margin-right:-50px;
+  padding-right: 50px; 
+  overflow-y: scroll;" id="work">
     <div class="w3-padding-64">
       <h2>My Work</h2>
       <p>Some of my latest projects.</p>
@@ -72,7 +74,9 @@
       </div>
     </div><br>
   </div>
-  <div class="w3-half w3-light-grey w3-center" style="min-height:1100px" id="work">
+  <div class="w3-half w3-light-grey w3-center" style="min-height:1100px margin-right:-50px;
+  padding-right: 50px; 
+  overflow-y: scroll;" id="work">
     <div class="w3-padding-64">
       <h2>More of my Work</h2>
     </div>
@@ -201,8 +205,10 @@
 </div> -->
 
 <!-- Third Grid: Swing By & Contact -->
-<div class="w3-row" id="contact">
-  <div class="w3-half w3-dark-grey w3-container w3-center" style="height:800px">
+<div class="w3-row" id="contact" style="overflow:hidden;">
+  <div class="w3-half w3-dark-grey w3-container w3-center" style="height:800px; margin-right:-50px;
+  padding-right: 50px; 
+  overflow-y: scroll;">
    <div class="w3-padding-64 w3-center">
       <h2>Timeline</h2>
       
