--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <p>OMR Scanner</p>
       </div>
       <div class="w3-half">
-        <a href="https://github.com/Abhi098/Movie_recommendation"><img src="images/movie.png" style="width:80%"></a>
+        <a href="https://github.com/Abhi098/Movie_recommendation"><img src="images/movie.png" style="width:80%; height:50%;"></a>
         <p>Movie recommendation system</p>
       </div>
     </div>
