--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 </div>
 
 <!-- Second Grid: Work & Resume -->
-  <div class="w3-row" style="overflow:hidden;">
-  <div class="w3-half w3-light-grey w3-center" style="min-height:1100px; margin-right:-50px;
-  padding-right: 50px; 
-  overflow-y: scroll;" id="work">
+  <div class="w3-row">
+  <div class="w3-half w3-light-grey w3-center" style="min-height:1100px; overflow:hidden;" id="work">
     <div class="w3-padding-64">
       <h2>My Work</h2>
       <p>Some of my latest projects.</p>
     </div>
-    <div class="w3-row">
+    <div class="w3-row" style="margin-right:-50px;
+  padding-right: 50px; 
+  overflow-y: scroll;">
       <div class="w3-half">
         <a href="https://github.com/Abhi098/Action_Recognition"><img src="images/result.png" style="width:80%"></a>
         <p>Action Recognition</p>
@@ -52,7 +52,9 @@
         <p>Damage Grade prediction post-earthquake</p>
       </div>
     </div>
-    <div class="w3-row w3-hide-small">
+    <div class="w3-row w3-hide-small" style="margin-right:-50px;
+  padding-right: 50px; 
+  overflow-y: scroll;">
       <div class="w3-half">
         <a href="https://github.com/Abhi098/Alexa_Skills"><img src="images/alexa.png" style="width:80%"></a>
         <p>ALEXA skills</p>
@@ -63,7 +65,9 @@
       </div>
     </div>
 
-    <div class="w3-row w3-hide-small">
+    <div class="w3-row w3-hide-small" style="margin-right:-50px;
+  padding-right: 50px; 
+  overflow-y: scroll;">
       <div class="w3-half">
         <a href="https://github.com/Abhi098/Finder"><img src="images/finder.png" style="width:80%"></a>
         <p>Finder App</p>
@@ -74,13 +78,13 @@
       </div>
     </div><br>
   </div>
-  <div class="w3-half w3-light-grey w3-center" style="min-height:1100px margin-right:-50px;
-  padding-right: 50px; 
-  overflow-y: scroll;" id="work">
+  <div class="w3-half w3-light-grey w3-center" style="min-height:1100px; overflow:hidden;" id="work">
     <div class="w3-padding-64">
       <h2>More of my Work</h2>
     </div>
-    <div class="w3-row">
+    <div class="w3-row" style="margin-right:-50px;
+  padding-right: 50px; 
+  overflow-y: scroll;">
       <div class="w3-half">
         <img src="images/quora.png" style="width:80%">
         <p>Quora similarity classification</p>
@@ -91,7 +95,9 @@
         <p>Twitter sentiment analyser</p>
       </div>
     </div>
-    <div class="w3-row w3-hide-small">
+    <div class="w3-row w3-hide-small" style="margin-right:-50px;
+  padding-right: 50px; 
+  overflow-y: scroll;">
       <div class="w3-half">
         <a href="https://github.com/Abhi098/OMR_Scanner"> <img src="images/omr.jpeg" style="width:80%"> </a>
         <p>OMR Scanner</p>
@@ -102,7 +108,9 @@
       </div>
     </div>
 
-    <div class="w3-row w3-hide-small">
+    <div class="w3-row w3-hide-small" style="margin-right:-50px;
+  padding-right: 50px; 
+  overflow-y: scroll;">
       <div class="w3-half">
         <a href="https://github.com/Abhi098/Resource_plannnig_tool-java-"><img src="images/submit.jpg" style="width:80%; height:40%;"></a>
         <p>Resource planning tool(JAVA)</p>
