--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>Damage Grade prediction post-earthquake</p>
       </div>
     </div>
-    <div class="w3-row w3-hide-small" style="margin-right:-50px;
+    <div class="w3-row" style="margin-right:-50px;
   padding-right: 50px; 
   overflow-y: scroll;">
       <div class="w3-half">
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <div class="w3-row w3-hide-small" style="margin-right:-50px;
+    <div class="w3-row" style="margin-right:-50px;
   padding-right: 50px; 
   overflow-y: scroll;">
       <div class="w3-half">
@@ -95,7 +95,7 @@
         <p>Twitter sentiment analyser</p>
       </div>
     </div>
-    <div class="w3-row w3-hide-small" style="margin-right:-50px;
+    <div class="w3-row" style="margin-right:-50px;
   padding-right: 50px; 
   overflow-y: scroll;">
       <div class="w3-half">
@@ -108,7 +108,7 @@
       </div>
     </div>
 
-    <div class="w3-row w3-hide-small" style="margin-right:-50px;
+    <div class="w3-row" style="margin-right:-50px;
   padding-right: 50px; 
   overflow-y: scroll;">
       <div class="w3-half">
