--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   padding-right: 50px; 
   overflow-y: scroll;">
       <div class="w3-half">
-        <img src="images/quora.png" style="width:80%">
+        <a href="https://github.com/Abhi098/Quora_similar_classification"><img src="images/quora.png" style="width:80%"></a>
         <p>Quora similarity classification</p>
       </div>
    
@@ -103,7 +103,7 @@
         <p>OMR Scanner</p>
       </div>
       <div class="w3-half">
-        <a href="https://github.com/Abhi098/Movie_recommendation"><img src="images/movie.png" style="width:80%; height:70%;"></a>
+        <a href="https://github.com/Abhi098/Movie_recommendation"><img src="images/movie.png" style="width:80%; height:400px;"></a>
         <p>Movie recommendation system</p>
       </div>
     </div>
