--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           <tr>
             <td>1997-2012</td>
             <td>Lots of School</td>
-            <td>I was in St Kabir school for my whole childhood with 9.4 CGPA in 10h standard(CBSE)</td>
+            <td>I was in St Kabir school for my whole childhood with 9.4CGPA in 10th standard(CBSE)</td>
           </tr>
           <tr class="w3-white">
             <td>2013-2015</td>
@@ -245,7 +245,7 @@
           <tr>
             <td>2015-2019</td>
             <td>A college boy</td>
-            <td>U.V Patel College of enginneering with specialization in Computer engineering where I graduated with 8.67 CGPA</td>
+            <td>U.V Patel College of Engineering with specialization in Computer engineering where I graduated with 8.67 CGPA</td>
           </tr>
           <tr class="w3-white">
             <td>2016-</td>
@@ -257,7 +257,7 @@
             <td>Centre of development for advanced computing</td>
             <td>Pursuing an post graduation diploma in Big Data analytics at CDAC pune. </td>
           </tr>
-          <tr class="w3-hide-medium">
+          <tr class="w3-white">
             <td>2016-Long Time</td>
             <td>Learing</td>
             <td>Cannot provide a date for when learing would end</td>
