--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
           </tr>
           <tr class="w3-white">
             <td>2016-Long Time</td>
-            <td>Learing</td>
-            <td>Cannot provide a date for when learing would end</td>
+            <td>Learning</td>
+            <td>Cannot provide a date for when learning would end</td>
           </tr> 
         </table>
       </div>
