--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   padding-right: 50px; 
   overflow-y: scroll;">
       <div class="w3-half">
-        <div class='container">
+        <div class="container">
         <a href="https://github.com/Abhi098/Action_Recognition"><img src="images/result.png" class="image"></a>
                     <div class="overlay">
     <div class="text">Know more</div>
