--- a/index.html
+++ b/index.html
@@ -4,49 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-.container {
-  position: relative;
-  width: 50%;
-}
-
-.image {
-  opacity: 1;
-  display: block;
-  width: 80%;
-  height: auto;
-  transition: .5s ease;
-  backface-visibility: hidden;
-}
-
-.middle {
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.container:hover .image {
-  opacity: 0.3;
-}
-
-.container:hover .middle {
-  opacity: 1;
-}
-
-.text {
-  background-color: #4CAF50;
-  color: white;
-  font-size: 16px;
-  padding: 16px 32px;
-}
-</style>  
-  
-  
+ 
 <body class="w3-content" style="max-width:1300px">
 
 <!-- First Grid: Logo & About -->
@@ -86,12 +44,8 @@
   padding-right: 50px; 
   overflow-y: scroll;">
       <div class="w3-half">
-        <div class="container">
-        <a href="https://github.com/Abhi098/Action_Recognition"><img src="images/result.png" class="image"></a>
-                    <div class="overlay">
-    <div class="text">Know more</div>
-  </div>
-</div>
+        <a href="https://github.com/Abhi098/Action_Recognition"><img src="images/result.png" style="width:80%;"></a>
+     
         <p>Action Recognition</p>
       </div>
    
