--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   overflow-y: scroll;">
       <div class="w3-half">
        
-        <a href="https://github.com/Abhi098/Action_Recognition"><img src="images/result.png" onmouseover="this.src='images/learn.png'"  style="width:80%;"></a>
+        <a href="https://github.com/Abhi098/Action_Recognition"><img src="images/result.png" onmouseover="this.src='images/learn.png'" onmouseout="this.src='images/result.png'"  style="width:80%;"></a>
          
         <p>Action Recognition</p>
       </div>
