--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="w3-half">
        
         <a href="https://github.com/Abhi098/Action_Recognition"><img src="images/result.png" onmouseover="this.src='images/learn.png'" onmouseout="this.src='images/result.png'"  style="width:80%;"></a>
-         <div>
+         <div style="position:fixed;">
         <p>Action Recognition</p>
         </div>
       </div>
