--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ window.ymConfig = {"bot":"x1629181098366","host":"https://cloud.yellowmessenger.
       <h1>About Me</h1>
       <img src="images/myself_circ.png" class="w3-margin w3-circle" alt="Person" style="width:290px; height:310px;">
       <div class="w3-left-align w3-padding-large">
-        <p>Graduate from U.V Patel College of Engineering in Computer Engineering currently pursuing Postgraduation diploma in big data analytics from CDAC(Centre for development of advanced computing.I have a thorough experience in working on different platform to develop models and applications which helped me in understanding those fields and also to devise novel solutions to the problems faced by many.Currently my field of interest is Machine Learning and computer vision, for which I have taken up few courses and now I am implementing those concepts in real life scenarios to build a coherent application tool. </p>
+        <p>Graduate from U.V Patel College of Engineering in Computer Engineering and completed a Postgraduation diploma in big data analytics from CDAC(Centre for development of advanced computing in 2019. I have a thorough experience in working on different platform to develop models and applications which helped me in understanding those fields and also to devise novel solutions to the problems faced by many.Currently my field of interest is Machine Learning and computer vision, for which I have taken up few courses and now I am implementing those concepts in real life scenarios to build a coherent application tool. </p>
         
       </div>
     </div>
