--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ window.ymConfig = {"bot":"x1629181098366","host":"https://cloud.yellowmessenger.
 <div class="w3-row">
   <div class="w3-half w3-black w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
-      <h1>Abhishek Pillai Developer test</h1>
+      <h1>Abhishek Pillai </h1>
     </div>
     <div class="w3-padding-64">
       <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Home</a>
